metacatui/src/main/webapp/js/themes/knb/css/metacatui.css
/* ... */
	/************/
	
    .carousel .item {
    	height: 400px;
      z-index: 170;
      /*
      -webkit-transition: opacity 4s; 
      -moz-transition: opacity 4s; 
      -ms-transition: opacity 4s; 
      -o-transition: opacity 4s; 
      transition: opacity 4s;
      */
    	-webkit-transition:0.6s ease-in-out left;
    	-moz-transition:0.6s ease-in-out left;
    	-ms-transition:0.6s ease-in-out left;
    	-o-transition:0.6s ease-in-out left;
    	transition:0.6s ease-in-out left;
      max-height: 400px;
      overflow: hidden;
    }
    
    .carousel-caption {
      background-color: #555555; /*IE 8 fallback */
      background: rgba(0,0,0,0.3);
      position: absolute;
      top: 150px;
      left: 50%;
      margin: 0px 0px 0px -250px;
      width: 500px;
      max-height: 130px;
      z-index: 200;
      padding: 10px 20px 10px 20px;
      -webkit-border-radius: 6px;
         -moz-border-radius: 6px;
              border-radius: 6px;
      
    }
    
    .carousel-caption h1 {
      margin: 0px;
      line-height: 1.25;
      font-family: "Lato";
      font-weight: 400;
      font-size: 36px;
      color: #FDFDFD;
    }
    
    .carousel-caption .lead {
      margin: 0;
      line-height: 1;
      font-family: "Lato";
      font-weight: 300;
      font-size: 24px;
      color: #FDFDFD;
    }
    .carousel-caption .btn-primary {
      position: absolute;
      bottom: 20px;
      right: 20px;
    }

  /* MAIN BODY CSS
  -------------------------------------------------- */
  /* Main body containing sidebar and content */
    .main-body-padded {
      padding-top: 90px;
    }
    
	.subset-choice.keyword-search-link {
		background-color: #115E95;
		color: white;
		text-shadow: none;
		margin-bottom: 10px;
	}
	
	.keyword-search-link.active{
		background-color: #1981CC;
	}

    h2.nav-header {
      margin: 20px 10px 10px 15px;
      padding: 3px 0px 3px 0px;
      color: #555555;      
    }

    #refine .nav-list {
      margin: 20px auto auto auto;
    }
    
    ul#refine .nav-list .input-append {
      max-width: 200px;
    }

    #browse .nav-list {
      margin: 20px auto auto auto;
      border: 1px solid #CCCCCC;
    }
    
    ul#browse a i {
      margin-right: 10px;
    }
    
    ul#browse a {
      font: 300 16px/16px "Lato";
      color: #555555;
    }

    ul#browse a:hover, ul#browse a:focus  {
      color: #3F3F3F;
    }

  /* About CSS
  -------------------------------------------------- */
    #About {
		min-height: 800px;
    }
    
/* Profile styles 
  -------------------------------------------------- */
  #Profile{
  	width: 80%;
  	margin-left: 10%;
  	margin-right: 10%;
  }
  
.format-charts{
	margin-left: auto;
	margin-right: auto;
	width: 840px;	
}
.format-charts text{
	font-size: 12px;
	
}
.format-charts > svg:first-child{
	margin: 0 30px 0 0;
}
#Profile .metadata{
	color: #992222;
	fill: #992222;
}

#Profile .data{
	color: #006a66;
	fill: #006a66;
}
#Profile #data-count-stat,
#Profile #metadata-count-stat{
	font-size: 24px;
}
#Profile #data-count-label,
#Profile #metadata-count-label{
	color: #555555;
	fill: #555555;
	font-size: 17px;
	line-height: 17px;
}
#Profile .id-label{
	font-size: 14px;
}
 


  /* Metadata rendering CSS
  -------------------------------------------------- */
    #Metadata {
		min-height: 800px;
		width: 90%;
		margin-top: 125px;
    }
    
    #Metadata > .container{
		width: 100%;
	}
	
	#Metadata > a[href="#data"]{
		display: block;
		margin-bottom: 20px;
		font-size: 13px;
	}
	
	.citation{
		font-size: 20px;
		line-height: 30px;
		margin-bottom: 40px;
		border: 0px;
		box-shadow: none;
		-webkit-box-shadow: none;
		-moz-box-shadow: none;
		padding: 0px;
		background-color: transparent;
	}
	
	.citation .span10{
		width: 100%;
	}
    
    /* Google Map Images for Geographic Region */
    .georegion-map{
    	margin-left: 125px;
    	margin-bottom: 10px;
    	border: 1px solid #DDD;
    	padding: 7px;
    	border-radius: 4px;
    	-moz-border-radius: 4px;
    	-webkit-border-radius: 4px;
    }
    
    /* Download  and Publish buttons */
     #downloadPackage a.btn {
    	width: 100px;
    	margin-bottom: 8px;
    } 
    
    .download-this-package{
    	float: left;
    	height: 100%;
    	margin-left: 20px;
    }
    
    .download-this-package a{
    	margin-top: 15%;
    	background-color: #992222;
    	color: #FFFFFF;
    	text-shadow: none;
    }
    
    .download-this-package a:hover{
    	background-color: #660000;
    	color: #FFFFFF;
    }
    
    .download-this-package a.metadata{
    	margin-top: 0px;
    }
    
    .download-this-package i{
    	margin-left: 5px;
    }
    
    /* Resource map contents table */
    
    #downloadContents{
    	margin-bottom: 40px;
    }
    
    table.download-contents{
    	float: left;
    	width: auto;
    }
    
    table.download-contents td{
    	min-width: 115px;
    }
    
    .format-type i{
    	margin-right: 5px;
    }
    .format-type {
    	text-transform: capitalize;
    }
    
    .file-type i{
  		  color: #999;
  		  margin-left: 5px;
    }
    
    th.id{
    	min-width: 180px;
    }
    
    /*Details link*/
    .download-contents .more-info{
    	padding-left: 20px;
    	max-width: 65px;
    	color: #999;
    	font-size: 12px;
    }
    
    .download-contents .more-info i{
    	margin-left: 3px;
    	font-size: 14px;
    }
    
    /*Taxonomic range*/
    .taxonomic-range .control-group{
    	margin-bottom: 20px;
    	width: auto;
    }
    .taxonomic-range .control-label{
    	width: auto;
    	padding: 0px 10px;
    }
    
    .taxonomic-range .controls > .control-group:nth-child(2n){
    	margin-left: 99px;
    }
    
    .taxonomic-range .control-label{
    	color: #999;
    }
    
    .taxonomic-range .controls {
		margin-left: 0px;
	}
/* ... */

